--- a/less/moodle/course.less
+++ b/less/moodle/course.less
@@ -76,12 +76,9 @@
             }
         }
     }
-
+    // Hide the filler, this makes edit buttons jump
     .filler {
-        width: 16px;
-        height: 16px;
-        padding: 0.3em;
-        display: inline-block;
+        display: none;
     }
 
     .activity.editor_displayed {
@@ -654,7 +651,7 @@ span.editinstructions {
             width:21px;
             height:21px;
             padding: 4px;
-            vertical-align: text-bottom;
+            vertical-align: bottom;
         }
     }
     .moodle-actionmenu[data-enhanced] {
